update html and css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>练习汉字 - ເຝິກຂຽນພາສາຈີນ</title>
+  <title>练习汉字 - ฝึกเขียนภาษาจีน</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/hanzi-writer@2.1.2/dist/hanzi-writer.min.js"></script>
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-  <h2>ข้อที่ <span id="question-number">1</span> / 10</h2>
+  <h2>ຂໍ້ທີ <span id="question-number">1</span> / 10</h2>
   <h3>เขียนตัวอักษร: <span id="target-word">加载中...</span></h3>
 
   <div id="writer"></div>
