--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="container">
   <h2>ຂໍ້ທີ <span id="question-number">1</span> / 10</h2>
-  <h3>เขียนตัวอักษร: <span id="target-word">加载中...</span></h3>
+  <h3>ຂຽນຕົວອັກສອນ: <span id="target-word">加载中...</span></h3>
 
   <div id="writer"></div>
 
